# twin

./: .dockerignore  .geminiignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  README.md  cloudbuild.yaml  compose.yaml  pyproject.toml
app/: main.py
app/api/v1/: api.py  chat.py
app/api/v1/endpoints/: twin.py
app/core/: config.py
app/models/: chat.py  twin.py
app/services/: chat_gemini.py  twin_gemini.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api_v1_chat.py  test_api_v1_twin.py  test_main.py  test_models_chat.py  test_models_twin.py  test_services_chat_gemini.py  test_services_twin_gemini.py  test_vulnerability.py
