[project]
name = "twin"
version = "0.1.0"
description = "A high-performance FastAPI application providing a streaming chat interface using the Google Gemini AI SDK."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.70.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
